update deps and build on JDK 11+